// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageSizeSelector/> custom options 1`] = `
<span
  className="gridbar-button-spacer"
>
  <div
    className="dropdown disabled btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={true}
      id="page-size-drop-undefined"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="button"
      type="button"
    >
      1
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="page-size-drop-undefined"
      className="dropdown-menu dropdown-menu-right"
      role="menu"
    >
      <li
        className="dropdown-header"
        onKeyDown={[Function]}
        role="heading"
      >
        Page Size
      </li>
      <li
        className="active"
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          1
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          2
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          3
        </a>
      </li>
    </ul>
  </div>
</span>
`;

exports[`<PageSizeSelector/> default props 1`] = `
<span
  className="gridbar-button-spacer"
>
  <div
    className="dropdown disabled btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={true}
      id="page-size-drop-undefined"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="button"
      type="button"
    >
      20
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="page-size-drop-undefined"
      className="dropdown-menu dropdown-menu-right"
      role="menu"
    >
      <li
        className="dropdown-header"
        onKeyDown={[Function]}
        role="heading"
      >
        Page Size
      </li>
      <li
        className="active"
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          20
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          40
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          100
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          250
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          400
        </a>
      </li>
    </ul>
  </div>
</span>
`;

exports[`<PageSizeSelector/> empty options 1`] = `
<span
  className="gridbar-button-spacer"
>
  <div
    className="dropdown disabled btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={true}
      id="page-size-drop-undefined"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="button"
      type="button"
    >
      1
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="page-size-drop-undefined"
      className="dropdown-menu dropdown-menu-right"
      role="menu"
    >
      <li
        className="dropdown-header"
        onKeyDown={[Function]}
        role="heading"
      >
        Page Size
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          20
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          40
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          100
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          250
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          400
        </a>
      </li>
    </ul>
  </div>
</span>
`;

exports[`<PageSizeSelector/> hidden based on totalRows 1`] = `null`;

exports[`<PageSizeSelector/> maxRows not first options 1`] = `
<span
  className="gridbar-button-spacer"
>
  <div
    className="dropdown disabled btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={true}
      id="page-size-drop-undefined"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="button"
      type="button"
    >
      40
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="page-size-drop-undefined"
      className="dropdown-menu dropdown-menu-right"
      role="menu"
    >
      <li
        className="dropdown-header"
        onKeyDown={[Function]}
        role="heading"
      >
        Page Size
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          20
        </a>
      </li>
      <li
        className="active"
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          40
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          100
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          250
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          400
        </a>
      </li>
    </ul>
  </div>
</span>
`;

exports[`<PageSizeSelector/> maxRows not in options 1`] = `
<span
  className="gridbar-button-spacer"
>
  <div
    className="dropdown disabled btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={true}
      id="page-size-drop-undefined"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="button"
      type="button"
    >
      5
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="page-size-drop-undefined"
      className="dropdown-menu dropdown-menu-right"
      role="menu"
    >
      <li
        className="dropdown-header"
        onKeyDown={[Function]}
        role="heading"
      >
        Page Size
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          20
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          40
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          100
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          250
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          400
        </a>
      </li>
    </ul>
  </div>
</span>
`;
